# meerkat

./: .bazelrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CHECKLIST-COMMS.md  CHECKLIST.md  CLAUDE.md  Cargo.toml  Cross.toml  DELETE_ME_WHEN_DONE_meerkat_06_findings.md  DESIGN-COMMS.md  DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LIVE_ADAPTER_MVP_TODO.md  LIVE_ADAPTER_REVIEW2_TODO.md  LIVE_ADAPTER_ROUND4_TODO.md  MODULE.bazel  Makefile  ONBOARDING.md  RALPH-PROMPT-SH.md  RALPH-PROMPT.md  README.md  SESSION_RUNTIME_R2_R5_TODO.md  SESSION_RUNTIME_SPLIT_TODO.md  SH_DESIGN.md  deny.toml  meerkat-architecture.html  renovate.json  rtc_methodology.md  rust-toolchain.toml  test_arc_str.rs  vendor
meerkat-agent/: Cargo.toml
meerkat-agent-build-authority/: BUILD.bazel  Cargo.toml  build.rs
meerkat-agent-build-authority/src/: lib.rs
meerkat-agent/src/: factory.rs  lib.rs
meerkat-anthropic/: BUILD.bazel  Cargo.toml
meerkat-anthropic/src/: client.rs  lib.rs  request_support.rs  web_search.rs
meerkat-anthropic/tests/: oauth_resolve.rs
meerkat-auth-core/: BUILD.bazel  Cargo.toml
meerkat-auth-core/src/: lib.rs  mcp_oauth.rs  oauth_flow.rs  resolver.rs  self_hosted.rs
meerkat-auth-core/tests/: aws_sts_authorizer.rs  azure_ad_authorizer.rs  google_auth_authorizer.rs  oauth_flow.rs  refresh_coordinator_crossproc.rs  refresh_coordinator_inproc.rs  token_lifecycle_clear.rs  token_store_contract.rs
meerkat-cli/: BUILD.bazel  Cargo.toml
meerkat-cli/src/: adapters.rs  cli_parse.rs  config.rs  main.rs  mcp.rs  mob_host.rs  stdin_events.rs  storage_migrate.rs  stream_renderer.rs
meerkat-cli/tests/: auth_binding_single_parser.rs  cli_auth_flow.rs  cli_mobpack_live_smoke.rs  connection_ref_single_parser.rs  e2e_mob_smoke_matrix.rs  e2e_mobpack_smoke.rs  e2e_resume.rs  e2e_rkat_comms.rs  e2e_rkat_init.rs  e2e_smoke.rs  help_mobpack_contract.rs  legacy_session_migration.rs  live_smoke_cli.rs  mcp_convention_roots.rs  runtime_backed_ingress.rs  slim_feature_graph.rs  sqlite_tools_full_reuse.rs  storage_doctor.rs  storage_migrate.rs  system_cli_init.rs  system_cli_mini.rs  system_cli_resume.rs  system_mob_cli_verbs.rs  system_mob_host_daemon.rs
meerkat-client/: BUILD.bazel  Cargo.toml
meerkat-client/src/: adapter.rs  anthropic.rs  block_assembler.rs  error.rs  factory.rs  gemini.rs  http.rs  lib.rs  openai.rs  openai_compatible.rs  openai_live.rs  openai_realtime_attachment.rs  provider.rs  realtime_session.rs  streaming.rs  test_client.rs  transport.rs  types.rs
meerkat-client/tests/: anthropic_oauth_resolve.rs  aws_sts_authorizer.rs  azure_ad_authorizer.rs  e2e.rs  e2e_system_proxy.rs  google_auth_authorizer.rs  live_client_provider_matrix.rs  oauth_flow.rs  openai_google_oauth_resolve.rs  provider_runtime_registry.rs  rct_contracts.rs  refresh_coordinator_crossproc.rs  refresh_coordinator_inproc.rs  system_client_proxy.rs  token_store_contract.rs
meerkat-comms/: BUILD.bazel  Cargo.toml
meerkat-comms-agent/: Cargo.toml
meerkat-comms-agent/src/: comms_agent.rs  lib.rs  listener.rs  manager.rs  tool_dispatcher.rs  types.rs
meerkat-comms-mcp/: Cargo.toml
meerkat-comms-mcp/src/: lib.rs  tools.rs
meerkat-comms/src/: classify.rs  event_injector.rs  host_acceptor.rs  identity.rs  inbox.rs  inproc.rs  io_task.rs  lib.rs  peer_comms_authority.rs  peer_directory_reachability_authority.rs  peer_directory_visibility_authority.rs  peer_meta.rs  peer_response_routing_authority.rs  peer_types.rs  plain_listener.rs  router.rs  trust.rs  types.rs
meerkat-comms/tests/: e2e.rs  embedded_skill_registration.rs  inbox_admission_toctou.rs  inproc_canonical_peer_routing.rs  peer_comms_kernel.rs  peer_directory_reachability_kernel.rs  rct_contracts.rs  router_ambiguous_name_typed_error.rs  router_integration.rs  trust_duplicate_name_ok_duplicate_id_rejected.rs
meerkat-contracts/: BUILD.bazel  Cargo.toml
meerkat-contracts/src/: emit.rs  event_catalog.rs  lib.rs  protocol.rs  request_lifecycle.rs  rest_catalog.rs  rpc_catalog.rs  session_locator.rs  version.rs
meerkat-contracts/tests/: auth_binding_wire.rs  connection_ref_wire.rs  image_generation_wire.rs  jobs_wire.rs  live_audio_format.rs  live_barge_in.rs  live_deadline_and_jitter.rs  mob_wire.rs  realtime_audio_format.rs  realtime_barge_in.rs  realtime_deadline_and_jitter.rs  realtime_tool_timeout.rs  realtime_vocabulary.rs  regression_wire_types.rs  runtime_turn_metadata_wire_override.rs  session_accept_input_typed_round_trip.rs  skill_ref_wire_no_legacy.rs
meerkat-core/: BUILD.bazel  Cargo.toml  build.rs
meerkat-core/src/: agent.rs  approval.rs  artifact.rs  blob.rs  budget.rs  checkpoint.rs  comms.rs  comms_bootstrap.rs  comms_config.rs  comms_drain_lifecycle_authority.rs  comms_runtime.rs  compact.rs  completion_feed.rs  config.rs  config_contract.rs  config_runtime.rs  config_store.rs  config_template.toml  connection.rs  error.rs  event.rs  event_injector.rs  event_tap.rs  gateway.rs  handles.rs  hooks.rs  image_content.rs  image_generation.rs  interaction.rs  lib.rs  live_adapter.rs  mcp_config.rs  memory.rs  model_defaults.rs  model_registry.rs  oauth_identity.rs  ops.rs  ops_lifecycle.rs  peer_correlation.rs  peer_meta.rs  (+34 more)
meerkat-core/tests/: auth_binding_no_string_form.rs  connection_ref_no_string_form.rs  fork_at_rotates_session_id.rs  hooks_behavior.rs  hooks_contracts.rs  image_generation_contracts.rs  mcp_config_crossproc.rs  ops_lifecycle_integration.rs  rct_contracts.rs  realm_connection_config.rs  regression_comms_host.rs  row22_generated_contracts.rs  row22_protocol_helpers.rs  runtime_turn_metadata_typed_round_trip.rs  skill_identity_migrations.rs  source_identity_resolve_enforces_lifecycle.rs  tool_notice_projection.rs  turn_execution_kernel.rs
meerkat-gemini/: BUILD.bazel  Cargo.toml
meerkat-gemini/src/: client.rs  image_generation.rs  lib.rs  web_search.rs
meerkat-hooks/: BUILD.bazel  Cargo.toml
meerkat-hooks/src/: lib.rs
meerkat-jobs/: BUILD.bazel  Cargo.toml
meerkat-live/: BUILD.bazel  Cargo.toml  build.rs
meerkat-llm-core/: BUILD.bazel  Cargo.toml
(+2829 files in other folders)
