# Root package marker for Bazel module extension labels.

filegroup(
    name = "workspace_metadata",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "MODULE.bazel",
        "MODULE.bazel.lock",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "workspace_cargo_manifests",
    srcs = glob(["Cargo.toml", "*/Cargo.toml", "*/*/Cargo.toml"], allow_empty = True),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "github_workflows",
    srcs = glob([".github/workflows/*"], allow_empty = True),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "workspace_rust_sources",
    srcs = glob(
        ["**/*.rs"],
        exclude = [
            ".git/**",
            "bazel-*",
            "bazel-*/**",
            "target/**",
        ],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "live_smoke_support",
    srcs = ["test-fixtures/live_smoke/support.rs"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test_fixtures",
    srcs = glob(
        ["test-fixtures/**"],
        exclude = [
            "test-fixtures/**/BUILD",
            "test-fixtures/**/BUILD.bazel",
        ],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "repo_governance_files",
    srcs = glob(["Makefile", "scripts/*"], allow_empty = True),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "workspace_runfiles",
    srcs = glob(
        [
            ".github/workflows/*",
            "**/*",
        ],
        exclude = [
            ".git/**",
            "bazel-*",
            "bazel-*/**",
            "**/node_modules/**",
            "target/**",
            "**/BUILD",
            "**/BUILD.bazel",
        ],
        allow_empty = True,
    ) + [
        "//meerkat-anthropic:package_runfiles",
        "//meerkat-auth-core:package_runfiles",
        "//meerkat-cli:package_runfiles",
        "//meerkat-client:package_runfiles",
        "//meerkat-comms:package_runfiles",
        "//meerkat-contracts:package_runfiles",
        "//meerkat-core:package_runfiles",
        "//meerkat-gemini:package_runfiles",
        "//meerkat-hooks:package_runfiles",
        "//meerkat-llm-core:package_runfiles",
        "//meerkat-machine-codegen:package_runfiles",
        "//meerkat-machine-derive:package_runfiles",
        "//meerkat-machine-dsl-core:package_runfiles",
        "//meerkat-machine-dsl:package_runfiles",
        "//meerkat-machine-kernels:package_runfiles",
        "//meerkat-machine-schema:package_runfiles",
        "//meerkat-mcp-server:package_runfiles",
        "//meerkat-mcp:package_runfiles",
        "//meerkat-memory:package_runfiles",
        "//meerkat-mob-mcp:package_runfiles",
        "//meerkat-mob-pack:package_runfiles",
        "//meerkat-mob:package_runfiles",
        "//meerkat-models:package_runfiles",
        "//meerkat-openai:package_runfiles",
        "//meerkat-providers:package_runfiles",
        "//meerkat-rest:package_runfiles",
        "//meerkat-rpc:package_runfiles",
        "//meerkat-runtime:package_runfiles",
        "//meerkat-schedule:package_runfiles",
        "//meerkat-session:package_runfiles",
        "//meerkat-skills:package_runfiles",
        "//meerkat-store:package_runfiles",
        "//meerkat-tools:package_runfiles",
        "//meerkat-web-runtime:package_runfiles",
        "//meerkat:package_runfiles",
        "//test-fixtures/machine-dsl-tests:package_runfiles",
        "//test-fixtures/mcp-test-server:package_runfiles",
        "//test-fixtures/surface-build-fixtures:package_runfiles",
        "//tests/integration:package_runfiles",
        "//vendor/oai-rt-rs:package_runfiles",
        "//xtask:package_runfiles",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "fast_tests",
    tests = [
        "//meerkat-anthropic:meerkat_anthropic_unit_test",
        "//meerkat-anthropic:oauth_resolve_test",
        "//meerkat-auth-core:aws_sts_authorizer_test",
        "//meerkat-auth-core:azure_ad_authorizer_test",
        "//meerkat-auth-core:google_auth_authorizer_test",
        "//meerkat-auth-core:meerkat_auth_core_unit_test",
        "//meerkat-auth-core:oauth_flow_test",
        "//meerkat-auth-core:refresh_coordinator_crossproc_test",
        "//meerkat-auth-core:refresh_coordinator_inproc_test",
        "//meerkat-auth-core:token_store_contract_test",
        "//meerkat-cli:cli_auth_flow_test",
        "//meerkat-cli:connection_ref_single_parser_test",
        "//meerkat-cli:runtime_backed_ingress_test",
        "//meerkat-cli:sqlite_tools_full_reuse_test",
        "//meerkat-client:meerkat_client_unit_test",
        "//meerkat-client:rct_contracts_test",
        "//meerkat-comms:inbox_admission_toctou_test",
        "//meerkat-comms:meerkat_comms_unit_test",
        "//meerkat-comms:router_ambiguous_name_typed_error_test",
        "//meerkat-comms:trust_duplicate_name_ok_duplicate_id_rejected_test",
        "//meerkat-contracts:connection_ref_wire_test",
        "//meerkat-contracts:image_generation_wire_test",
        "//meerkat-contracts:meerkat_contracts_unit_test",
        "//meerkat-contracts:realtime_audio_format_test",
        "//meerkat-contracts:realtime_barge_in_test",
        "//meerkat-contracts:realtime_deadline_and_jitter_test",
        "//meerkat-contracts:realtime_tool_timeout_test",
        "//meerkat-contracts:regression_wire_types_test",
        "//meerkat-contracts:runtime_turn_metadata_wire_override_test",
        "//meerkat-contracts:session_accept_input_typed_round_trip_test",
        "//meerkat-contracts:skill_ref_wire_no_legacy_test",
        "//meerkat-core:connection_ref_no_string_form_test",
        "//meerkat-core:fork_at_rotates_session_id_test",
        "//meerkat-core:hooks_behavior_test",
        "//meerkat-core:hooks_contracts_test",
        "//meerkat-core:image_generation_contracts_test",
        "//meerkat-core:meerkat_core_unit_test",
        "//meerkat-core:rct_contracts_test",
        "//meerkat-core:realm_connection_config_test",
        "//meerkat-core:runtime_turn_metadata_typed_round_trip_test",
        "//meerkat-core:source_identity_resolve_enforces_lifecycle_test",
        "//meerkat-core:tool_notice_projection_test",
        "//meerkat-gemini:meerkat_gemini_unit_test",
        "//meerkat-hooks:meerkat_hooks_unit_test",
        "//meerkat-llm-core:meerkat_llm_core_unit_test",
        "//meerkat-machine-codegen:artifacts_semantic_model_test",
        "//meerkat-machine-codegen:meerkat_machine_codegen_unit_test",
        "//meerkat-machine-codegen:named_type_binding_respected_test",
        "//meerkat-machine-codegen:render_contracts_test",
        "//meerkat-machine-codegen:routed_effect_module_shape_test",
        "//meerkat-machine-codegen:runtime_alphabet_parity_test",
        "//meerkat-machine-codegen:runtime_schema_parity_test",
        "//meerkat-machine-dsl-core:meerkat_machine_dsl_core_unit_test",
        "//meerkat-machine-kernels:kernel_typed_round_trip_test",
        "//meerkat-machine-kernels:meerkat_machine_kernels_unit_test",
        "//meerkat-machine-schema:auth_machine_release_test",
        "//meerkat-machine-schema:catalog_typed_round_trip_test",
        "//meerkat-machine-schema:identity_roundtrip_test",
        "//meerkat-machine-schema:meerkat_machine_schema_unit_test",
        "//meerkat-machine-schema:named_type_binding_covers_catalog_test",
        "//meerkat-machine-schema:peer_endpoint_structural_equivalence_test",
        "//meerkat-machine-schema:schema_contracts_test",
        "//meerkat-mcp-server:mcp_binding_input_test",
        "//meerkat-mcp-server:meerkat_mcp_server_unit_test",
        "//meerkat-mcp-server:runtime_backed_ingress_test",
        "//meerkat-mcp:lifecycle_contract_test",
        "//meerkat-mcp:meerkat_mcp_unit_test",
        "//meerkat-memory:meerkat_memory_unit_test",
        "//meerkat-mob-mcp:meerkat_mob_mcp_unit_test",
        "//meerkat-mob-pack:meerkat_mob_pack_unit_test",
        "//meerkat-mob:dispatcher_rule_synthetic_injection_test",
        "//meerkat-mob:flow_frame_recovery_tests_test",
        "//meerkat-mob:meerkat_mob_unit_test",
        "//meerkat-mob:member_session_bindings_test",
        "//meerkat-mob:mob_orchestrator_kernel_test",
        "//meerkat-mob:shadow_state_absent_test",
        "//meerkat-models:guards_test",
        "//meerkat-models:meerkat_models_unit_test",
        "//meerkat-openai:meerkat_openai_unit_test",
        "//meerkat-openai:mock_realtime_ws_selftest_test",
        "//meerkat-openai:oauth_resolve_test",
        "//meerkat-providers:meerkat_providers_unit_test",
        "//meerkat-rest:meerkat_rest_unit_test",
        "//meerkat-rest:regression_persistent_test",
        "//meerkat-rest:rest_auth_endpoints_test",
        "//meerkat-rest:rest_catalog_regression_test",
        "//meerkat-rest:runtime_backed_ingress_test",
        "//meerkat-rpc:meerkat_rpc_unit_test",
        "//meerkat-rpc:realtime_ws_protocol_test",
        "//meerkat-rpc:regression_rpc_test",
        "//meerkat-rpc:rpc_auth_methods_test",
        "//meerkat-rpc:runtime_backed_ingress_test",
        "//meerkat-runtime:auth_reauth_notice_test",
        "//meerkat-runtime:composition_dispatch_is_the_path_test",
        "//meerkat-runtime:composition_driver_contract_test",
        "//meerkat-runtime:control_plane_contract_test",
        "//meerkat-runtime:core_apply_terminal_truth_test",
        "//meerkat-runtime:detached_wake_contract_test",
        "//meerkat-runtime:driver_ephemeral_test",
        "//meerkat-runtime:driver_persistent_test",
        "//meerkat-runtime:handles_dispatch_through_dispatcher_test",
        "//meerkat-runtime:meerkat_machine_test",
        "//meerkat-runtime:meerkat_runtime_unit_test",
        "//meerkat-runtime:ops_lifecycle_contract_test",
        "//meerkat-runtime:ops_lifecycle_persistence_test",
        "//meerkat-runtime:peer_handling_mode_contract_test",
        "//meerkat-runtime:peer_ingress_fact_ratchet_test",
        "//meerkat-runtime:peer_interaction_dsl_test",
        "//meerkat-runtime:peer_projection_dsl_test",
        "//meerkat-runtime:peer_projection_producer_wiring_test",
        "//meerkat-runtime:recovery_contract_test",
        "//meerkat-runtime:recovery_replay_test",
        "//meerkat-runtime:regression_comms_runtime_test",
        "//meerkat-runtime:runtime_bindings_contract_test",
        "//meerkat-runtime:runtime_ingress_control_test",
        "//meerkat-runtime:session_context_observer_race_test",
        "//meerkat-runtime:trust_reconcile_add_failure_test",
        "//meerkat-runtime:trust_reconcile_concurrency_test",
        "//meerkat-runtime:turn_metadata_single_construction_site_test",
        "//meerkat-schedule:meerkat_schedule_unit_test",
        "//meerkat-session:ephemeral_contract_test",
        "//meerkat-session:meerkat_session_unit_test",
        "//meerkat-session:persistence_compat_test",
        "//meerkat-session:regression_lifecycle_test",
        "//meerkat-skills:meerkat_skills_unit_test",
        "//meerkat-skills:resolver_precedence_test",
        "//meerkat-skills:transport_sources_test",
        "//meerkat-store:meerkat_store_unit_test",
        "//meerkat-store:rct_contracts_test",
        "//meerkat-store:schedule_atomic_mutation_test",
        "//meerkat-store:schedule_receipt_projection_test",
        "//meerkat-store:stress_high_concurrency_test",
        "//meerkat-tools:browse_load_surface_test",
        "//meerkat-tools:builtin_skill_canonical_key_test",
        "//meerkat-tools:dispatcher_access_denied_distinct_test",
        "//meerkat-tools:meerkat_tools_unit_test",
        "//meerkat-tools:rct_contracts_test",
        "//meerkat-web-runtime:browser_contract_test",
        "//meerkat-web-runtime:meerkat_web_runtime_unit_test",
        "//meerkat-web-runtime:release_targets_test",
        "//meerkat-web-runtime:wasm_external_resolver_test",
        "//meerkat:agent_factory_connection_ref_test",
        "//meerkat:embedded_skill_registration_test",
        "//meerkat:factory_build_agent_test",
        "//meerkat:meerkat_unit_test",
        "//meerkat:persistence_contract_test",
        "//meerkat:realtime_channel_builder_test",
        "//meerkat:schedule_host_typed_mapping_test",
        "//meerkat:sdk_agentfactory_test",
        "//meerkat:sdk_config_ephemeral_test",
        "//meerkat:sdk_structured_output_test",
        "//test-fixtures/machine-dsl-tests:machine_dsl_tests_unit_test",
        "//tests/integration:meerkat_integration_tests_unit_test",
        "//xtask:buildbuddy_static_lanes_test",
        "//xtask:ci_gate_requires_rmat_test",
        "//xtask:protocol_codegen_drift_test",
        "//xtask:rmat_audit_test",
        "//xtask:rmat_strict_test",
        "//xtask:seam_inventory_strict_test",
        "//xtask:xtask_unit_test",
    ],
)

test_suite(
    name = "e2e_system_tests",
    tests = [
        "//meerkat-cli:e2e_system_cli_capabilities_and_config_bazel_test",
        "//meerkat-cli:e2e_system_cli_init_snapshot_bazel_test",
        "//meerkat-cli:e2e_system_cli_mobpack_pack_inspect_validate_bazel_test",
        "//meerkat-cli:e2e_system_cli_resume_tools_bazel_test",
        "//meerkat-cli:e2e_system_cli_wasm_forbidden_capability_bazel_test",
        "//meerkat-cli:e2e_system_cli_wasm_surface_gate_bazel_test",
        "//meerkat-rest:e2e_system_rest_resume_metadata_bazel_test",
        "//tests/integration:e2e_system_sqlite_shared_realm_cli_rest_cli_bazel_test",
        "//tests/integration:e2e_system_sqlite_shared_realm_cli_rpc_cli_bazel_test",
        "//tests/integration:e2e_system_sqlite_shared_realm_rpc_rest_rpc_bazel_test",
    ],
)

filegroup(
    name = "surface_feature_matrix_builds",
    srcs = [
        "//meerkat-cli:rkat_mini_surface_mini_providers_bin",
        "//meerkat-cli:rkat_mini_surface_mini_providers_skills_bin",
        "//meerkat-cli:rkat_mini_surface_session_store_bin",
        "//meerkat-cli:rkat_mini_surface_session_store_comms_mcp_bin",
        "//meerkat-cli:rkat_mini_surface_session_store_mcp_bin",
        "//meerkat-cli:rkat_surface_session_store_bin",
        "//meerkat-cli:rkat_surface_session_store_comms_mcp_bin",
        "//meerkat-cli:rkat_surface_session_store_mcp_bin",
        "//meerkat-mcp-server:meerkat_mcp_server_surface_comms",
        "//meerkat-mcp-server:meerkat_mcp_server_surface_min",
        "//meerkat-mcp-server:rkat_mcp_surface_comms_bin",
        "//meerkat-mcp-server:rkat_mcp_surface_min_bin",
        "//meerkat-rest:meerkat_rest_surface_comms",
        "//meerkat-rest:meerkat_rest_surface_min",
        "//meerkat-rest:rkat_rest_surface_comms_bin",
        "//meerkat-rest:rkat_rest_surface_min_bin",
        "//meerkat-rpc:meerkat_rpc_surface_comms_mcp",
        "//meerkat-rpc:meerkat_rpc_surface_min",
        "//meerkat-rpc:meerkat_rpc_surface_mini",
        "//meerkat-rpc:rkat_rpc_mini_surface_comms_mcp_bin",
        "//meerkat-rpc:rkat_rpc_mini_surface_min_bin",
        "//meerkat-rpc:rkat_rpc_mini_surface_mini_bin",
        "//meerkat-rpc:rkat_rpc_surface_comms_mcp_bin",
        "//meerkat-rpc:rkat_rpc_surface_min_bin",
    ],
    visibility = ["//visibility:public"],
)
