[workspace]
resolver = "2"
members = [
    "meerkat-core",
    "meerkat-client",
    "meerkat-store",
    "meerkat-tools",
    "meerkat-mcp",
    "meerkat-mcp-server",
    "meerkat-cli",
    "meerkat-rest",
    "meerkat",
    "meerkat-comms",
    "test-fixtures/mcp-test-server",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Meerkat Contributors"]
repository = "https://github.com/lukacf/meerkat"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
toml = "0.8"
toml_edit = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
nix = { version = "0.29", features = ["signal", "process"] }
which = "7"
uuid = { version = "1.11", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2.1"
humantime-serde = "1.1"
redb = "2"

# JSON Schema validation
jsonschema = "0.26"
schemars = { version = "1", features = ["derive"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"

# Web framework
axum = { version = "0.8", features = ["json"] }
hyper = "1.6"
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# MCP
rmcp = "0.14"

# Testing
tempfile = "3.14"

# Internal crates
meerkat-core = { path = "meerkat-core" }
meerkat-client = { path = "meerkat-client" }
meerkat-store = { path = "meerkat-store" }
meerkat-tools = { path = "meerkat-tools" }
meerkat-mcp = { path = "meerkat-mcp" }
meerkat-mcp-server = { path = "meerkat-mcp-server" }
meerkat-cli = { path = "meerkat-cli" }
meerkat-rest = { path = "meerkat-rest" }
meerkat = { path = "meerkat" }
meerkat-comms = { path = "meerkat-comms" }


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
mutex_integer = "deny"
mutex_atomic = "deny"
redundant_clone = "deny"
implicit_clone = "deny"
# Allow patterns common in development
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
manual_string_new = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
single_match_else = "allow"
similar_names = "allow"
doc_markdown = "allow"
match_bool = "allow"
items_after_statements = "allow"
