[workspace]
resolver = "2"
members = [
    "meerkat-core",
    "meerkat-client",
    "meerkat-store",
    "meerkat-tools",
    "meerkat-mcp",
    "meerkat-mcp-server",
    "meerkat-cli",  # publishes as "rkat" on crates.io
    "meerkat-rest",
    "meerkat",
    "meerkat-comms",
    "meerkat-hooks",
    "meerkat-rpc",
    "meerkat-session",
    "meerkat-memory",
    "meerkat-contracts",
    "meerkat-skills",
    "meerkat-mob",
    "meerkat-mob-pack",
    "meerkat-web-runtime",
    "meerkat-mob-mcp",
    "test-fixtures/mcp-test-server",
    "tests/integration",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
authors = ["Luka Crnkovic-Friis"]
repository = "https://github.com/lukacf/meerkat"
homepage = "https://docs.rkat.ai"
documentation = "https://docs.rkat.ai"
keywords = ["agent", "llm", "ai", "meerkat"]
categories = ["development-tools", "api-bindings"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio_with_wasm = { version = "0.8", features = ["macros", "sync", "time", "rt"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
toml = "0.8"
toml_edit = "0.22"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
nix = { version = "0.29", features = ["signal", "process", "fs"] }
which = "7"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2.1"
humantime-serde = "1.1"
parking_lot = "0.12"
redb = "2"
indexmap = { version = "2", features = ["serde"] }
tokio-util = "0.7"

# JSON Schema validation
jsonschema = { version = "0.26", default-features = false }
schemars = { version = "1", features = ["derive"] }

# YAML
serde_yml = "0.0.12"

# Enum utilities
strum = { version = "0.27", features = ["derive"] }
inventory = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"

# Web framework
axum = { version = "0.8", features = ["json"] }
hyper = "1.6"
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# MCP
rmcp = "0.14"

# Crypto
subtle = "2.6"

# Testing
tempfile = "3.14"

# Internal crates
meerkat-core = { version = "0.4.0", path = "meerkat-core" }
meerkat-client = { version = "0.4.0", path = "meerkat-client", default-features = false }
meerkat-store = { version = "0.4.0", path = "meerkat-store", default-features = false }
meerkat-tools = { version = "0.4.0", path = "meerkat-tools", default-features = false }
meerkat-mcp = { version = "0.4.0", path = "meerkat-mcp" }
meerkat-mcp-server = { version = "0.4.0", path = "meerkat-mcp-server" }
meerkat-cli = { version = "0.4.0", path = "meerkat-cli" }
meerkat-rest = { version = "0.4.0", path = "meerkat-rest" }
meerkat = { version = "0.4.0", path = "meerkat", default-features = false }
meerkat-comms = { version = "0.4.0", path = "meerkat-comms" }
meerkat-hooks = { version = "0.4.0", path = "meerkat-hooks" }
meerkat-rpc = { version = "0.4.0", path = "meerkat-rpc" }
meerkat-session = { version = "0.4.0", path = "meerkat-session", default-features = false }
meerkat-memory = { version = "0.4.0", path = "meerkat-memory", default-features = false }
meerkat-contracts = { version = "0.4.0", path = "meerkat-contracts", default-features = false }
meerkat-skills = { version = "0.4.0", path = "meerkat-skills" }
meerkat-mob = { version = "0.4.0", path = "meerkat-mob" }
meerkat-mob-pack = { version = "0.4.0", path = "meerkat-mob-pack" }
meerkat-mob-mcp = { version = "0.4.0", path = "meerkat-mob-mcp" }


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# ── Lint groups (pedantic is the main "paranoid" level) ──────────────
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# ── Hard denies (these are bugs, not style) ─────────────────────────
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
mutex_integer = "deny"
mutex_atomic = "deny"
redundant_clone = "deny"
implicit_clone = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "allow"
print_stderr = "allow"

# ── Pedantic allows (noisy or inapplicable) ─────────────────────────
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
return_self_not_must_use = "allow"
manual_string_new = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
missing_fields_in_debug = "allow"
unreadable_literal = "allow"
float_cmp = "allow"
single_match_else = "allow"
similar_names = "allow"
doc_markdown = "allow"
match_bool = "allow"
items_after_statements = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
needless_pass_by_value = "allow"
needless_continue = "allow"
trivially_copy_pass_by_ref = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
struct_field_names = "allow"
doc_link_with_quotes = "allow"
missing_const_for_fn = "allow"
default_trait_access = "allow"
let_underscore_untyped = "allow"
allow_attributes_without_reason = "allow"
ignore_without_reason = "allow"
manual_let_else = "allow"
unused_async = "allow"
assigning_clones = "allow"
format_push_string = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
map_unwrap_or = "allow"
case_sensitive_file_extension_comparisons = "allow"
ref_option = "allow"
# Cargo
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
tag-message = "Release v{{version}}"
# Bump SDK versions + regenerate schemas before committing
# cargo-release runs hooks from each crate dir, so resolve workspace root via git
pre-release-hook = ["bash", "-c", "$(git rev-parse --show-toplevel)/scripts/release-hook.sh {{version}}"]
publish = false
push = true
