module(
    name = "meerkat",
    version = "0.0.0",
)

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "apple_support", version = "1.24.2")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "cargo_deny_darwin_arm64",
    build_file_content = 'exports_files(["cargo-deny"])',
    sha256 = "2437a51d904b29abe2d3aa9ea87e353c86cff108d519ba1e5fb495bb28e7fbaf",
    strip_prefix = "cargo-deny-0.19.4-aarch64-apple-darwin",
    urls = ["https://github.com/EmbarkStudios/cargo-deny/releases/download/0.19.4/cargo-deny-0.19.4-aarch64-apple-darwin.tar.gz"],
)

http_archive(
    name = "cargo_deny_linux_x86_64",
    build_file_content = 'exports_files(["cargo-deny"])',
    sha256 = "3bd58b784e83715b86ddbc9deac591890372ec77fda5741bb0826970b958506f",
    strip_prefix = "cargo-deny-0.19.4-x86_64-unknown-linux-musl",
    urls = ["https://github.com/EmbarkStudios/cargo-deny/releases/download/0.19.4/cargo-deny-0.19.4-x86_64-unknown-linux-musl.tar.gz"],
)

NODE_BUILD_FILE = '''
filegroup(
    name = "node",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "npm_runtime",
    srcs = glob(["lib/node_modules/npm/**"]) + [
        "bin/node",
        "bin/npm",
        "bin/npx",
    ],
    visibility = ["//visibility:public"],
)

exports_files([
    "bin/node",
    "lib/node_modules/npm/bin/npm-cli.js",
    "lib/node_modules/npm/bin/npx-cli.js",
], visibility = ["//visibility:public"])
'''

http_archive(
    name = "node_darwin_arm64",
    build_file_content = NODE_BUILD_FILE,
    sha256 = "db4b275b83736df67533529a18cc55de2549a8329ace6c7bcc68f8d22d3c9000",
    strip_prefix = "node-v22.22.2-darwin-arm64",
    urls = ["https://nodejs.org/dist/v22.22.2/node-v22.22.2-darwin-arm64.tar.gz"],
)

http_archive(
    name = "node_linux_x86_64",
    build_file_content = NODE_BUILD_FILE,
    sha256 = "88fd1ce767091fd8d4a99fdb2356e98c819f93f3b1f8663853a2dee9b438068a",
    strip_prefix = "node-v22.22.2-linux-x64",
    urls = ["https://nodejs.org/dist/v22.22.2/node-v22.22.2-linux-x64.tar.xz"],
)

http_archive(
    name = "python_darwin_arm64",
    build_file_content = '''
filegroup(name = "python", srcs = glob(["**/*"]), visibility = ["//visibility:public"])
exports_files(["python/bin/python3"], visibility = ["//visibility:public"])
''',
    sha256 = "6f304f4ec30854611f23316578302235fb517cd970519ecdd11a8c4db87fd843",
    urls = ["https://github.com/astral-sh/python-build-standalone/releases/download/20260414/cpython-3.14.4%2B20260414-aarch64-apple-darwin-install_only_stripped.tar.gz"],
)

http_archive(
    name = "python_linux_x86_64",
    build_file_content = '''
filegroup(name = "python", srcs = glob(["**/*"]), visibility = ["//visibility:public"])
exports_files(["python/bin/python3"], visibility = ["//visibility:public"])
''',
    sha256 = "fe9a9c32d13870af632cbac3dfc7528ae53597e94472aa4c7d6a42e8166136cd",
    urls = ["https://github.com/astral-sh/python-build-standalone/releases/download/20260414/cpython-3.14.4%2B20260414-x86_64-unknown-linux-gnu-install_only_stripped.tar.gz"],
)

http_archive(
    name = "wasm_pack_darwin_arm64",
    build_file_content = 'exports_files(["wasm-pack"])',
    sha256 = "9d0e70c6b229de18f0abfe910f2963e8f09ebae218250e9b09a1c3fdd955bef9",
    strip_prefix = "wasm-pack-v0.14.0-aarch64-apple-darwin",
    urls = ["https://github.com/wasm-bindgen/wasm-pack/releases/download/v0.14.0/wasm-pack-v0.14.0-aarch64-apple-darwin.tar.gz"],
)

http_archive(
    name = "wasm_pack_linux_x86_64",
    build_file_content = 'exports_files(["wasm-pack"])',
    sha256 = "278a8d668085821f4d1a637bd864f1713f872b0ae3a118c77562a308c0abfe8d",
    strip_prefix = "wasm-pack-v0.14.0-x86_64-unknown-linux-musl",
    urls = ["https://github.com/wasm-bindgen/wasm-pack/releases/download/v0.14.0/wasm-pack-v0.14.0-x86_64-unknown-linux-musl.tar.gz"],
)

http_archive(
    name = "rust_std_wasm32_unknown_unknown_1_94_0",
    build_file_content = '''
filegroup(name = "rust_std", srcs = glob(["**/*"]), visibility = ["//visibility:public"])
''',
    sha256 = "bc65af3c0bfa2e5b20e299358710a26ce33a3674c762a2a010bc383c5b7fc202",
    strip_prefix = "rust-std-1.94.0-wasm32-unknown-unknown/rust-std-wasm32-unknown-unknown",
    urls = ["https://static.rust-lang.org/dist/rust-std-1.94.0-wasm32-unknown-unknown.tar.xz"],
)

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")
buildbuddy.msvc_toolchain(
    msvc_edition = "Professional",
    msvc_release = "2022",
    msvc_version = "14.42.34433",
    windows_kits_version = "10.0.26100.0",
    windows_kits_release = "10",
)
use_repo(buildbuddy, "buildbuddy_toolchain")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = [
        "wasm32-unknown-unknown",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
    ],
    versions = ["1.94.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")
register_toolchains(
    "//platforms:meerkat_windows_cc_toolchain_impl",
    "@buildbuddy_toolchain//:ubuntu_cc_toolchain",
    "@buildbuddy_toolchain//:ubuntu_cc_toolchain_arm64",
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
        "x86_64-pc-windows-msvc",
        "wasm32-unknown-unknown",
    ],
)
use_repo(crate, "crates")
